[gd_scene load_steps=2 format=3 uid="uid://b32dvre6hgi3k"]

[ext_resource type="Script" uid="uid://cvvlvf3ne3n6m" path="res://control.gd" id="1_g4v7n"]

[node name="BaseTela" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g4v7n")

[node name="Cabecalho" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LabelTempo" type="Label" parent="Cabecalho"]
layout_mode = 2

[node name="LabelDinheiro" type="Label" parent="Cabecalho"]
layout_mode = 2

[node name="BotaoOpcoes" type="Button" parent="Cabecalho"]
layout_mode = 2

[node name="TelaAtiva" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Rodape" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ButtonMain" type="Button" parent="Rodape"]
layout_mode = 2

[node name="ButtonLoja" type="Button" parent="Rodape"]
layout_mode = 2

[node name="ButtonInventario" type="Button" parent="Rodape"]
layout_mode = 2

[node name="ButtonUpgrade" type="Button" parent="Rodape"]
layout_mode = 2

[node name="Button" type="Button" parent="Rodape"]
layout_mode = 2
